New photos for seasonal specialties

--- a/chinese/soups.html
+++ b/chinese/soups.html
@@ -49,13 +49,13 @@
 		</div><!--grid_thumb-->
 
 
-        <div class="grid_thumb">
+        <!--<div class="grid_thumb">
 			<div class="heading">
 				<h1>海馬遼參養生湯</h1>
 				<p class="price">$88<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/2_soups/seahorsesoup_s.jpg" alt="海馬遼參養生湯" />
-		</div><!--grid_thumb-->
+		</div>grid_thumb-->
 
 
         <div class="grid_thumb">
@@ -100,6 +100,22 @@
 				<p class="price">$88<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/2_soups/trufflescallop_s.jpg" alt="黑松露燉螺片乾貝" />
+		</div><!--grid_thumb-->
+        
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>粉葛鯪魚赤小豆炖湯</h1>
+				<p class="price">$38<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/2_soups/fishlittlebean_s.jpg" alt="粉葛鯪魚赤小豆炖湯" />
+		</div><!--grid_thumb-->
+        
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>金銀菜炖豬肺湯</h1>
+				<p class="price">$38<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/2_soups/goldsilver_s.jpg" alt="金銀菜炖豬肺湯" />
 		</div><!--grid_thumb-->
 
 
