--- a/chinese/specialties_heart.html
+++ b/chinese/specialties_heart.html
@@ -181,6 +181,14 @@
 			</div>
 			<img src="../images/dishes/6_specialties_xinyi/blackpepperbeef_s.jpg" alt="黑椒茄瓜焗牛仔骨" />
 		</div><!--grid_thumb-->
+        
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>炭燒西冷扒</h1>
+				<p class="price">$22<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/6_specialties_xinyi/sirloin_s.jpg" alt="炭燒西冷扒" />
+		</div><!--grid_thumb-->
 
 
 
