--- a/english/soups.html
+++ b/english/soups.html
@@ -51,13 +51,13 @@
 		</div><!--grid_thumb-->
 
 
-        <div class="grid_thumb">
+        <!--<div class="grid_thumb">
 			<div class="heading">
 				<h1>Double-boiled dried seahorse with dried scallops and spike sea cucumber soup</h1>
 				<p class="price">$88<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/2_soups/seahorsesoup_s.jpg" alt="Double-boiled dried seahorse with dried scallops and spike sea cucumber soup" />
-		</div><!--grid_thumb-->
+		</div>grid_thumb-->
 
 
         <div class="grid_thumb">
@@ -102,6 +102,22 @@
 				<p class="price">$88<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/2_soups/trufflescallop_s.jpg" alt="Double-boiled black truffle, dried scallops and conch meat soup" />
+		</div><!--grid_thumb-->
+        
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>Double-boiled kudzu, dace, pork and rice bean soup</h1>
+				<p class="price">$38<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/2_soups/fishlittlebean_s.jpg" alt="Double-boiled kudzu, dace, pork and rice bean soup" />
+		</div><!--grid_thumb-->
+        
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>Double-boiled pigs lung, pork, fresh and preserved cabbage soup</h1>
+				<p class="price">$38<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/2_soups/goldsilver_s.jpg" alt="Double-boiled pigs lung, pork, fresh and preserved cabbage soup" />
 		</div><!--grid_thumb-->
 
 
