--- a/english/specialties_heart.html
+++ b/english/specialties_heart.html
@@ -185,6 +185,14 @@
 			</div>
 			<img src="../images/dishes/6_specialties_xinyi/blackpepperbeef_s.jpg" alt="Braised beef short rib with eggplant in black pepper sauce" />
 		</div><!--grid_thumb-->
+        
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>Charcoal grilled <br />sirloin steak</h1>
+				<p class="price">$22<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/6_specialties_xinyi/sirloin_s.jpg" alt="Charcoal grilled sirloin steak" />
+		</div><!--grid_thumb-->
 
 
 
