Fixed soup trad. chinese + top bar bug

--- a/chinese/soups.html
+++ b/chinese/soups.html
@@ -104,18 +104,18 @@
         
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>粉葛鯪魚赤小豆炖湯</h1>
+				<h1>粉葛鯪魚赤小豆燉湯</h1>
 				<p class="price">$38<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/2_soups/fishlittlebean_s.jpg" alt="粉葛鯪魚赤小豆炖湯" />
+			<img src="../images/dishes/2_soups/fishlittlebean_s.jpg" alt="粉葛鯪魚赤小豆燉湯" />
 		</div><!--grid_thumb-->
         
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>金銀菜炖豬肺湯</h1>
+				<h1>金銀菜燉豬肺湯</h1>
 				<p class="price">$38<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/2_soups/goldsilver_s.jpg" alt="金銀菜炖豬肺湯" />
+			<img src="../images/dishes/2_soups/goldsilver_s.jpg" alt="金銀菜燉豬肺湯" />
 		</div><!--grid_thumb-->
 
 
