Item Updates (BBQ, Hotpot, Old-style, Soup)

--- a/chinese/noodles_rices.html
+++ b/chinese/noodles_rices.html
@@ -84,12 +84,19 @@
 		</div><!--grid_thumb-->
 
 
-        <div class="grid_thumb">
+        <!--<div class="grid_thumb">
 			<div class="heading">
 				<h1>黑松露海膽蛋白炒飯</h1>
 				<p class="price">$28<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/trufflerice_s.jpg" alt="黑松露海膽蛋白炒飯" />
+		</div>grid_thumb-->
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>砂窩薑葱麵</h1>
+				<p class="price">$16<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/7_noodlesandrice/hotpotnoodle_s.jpg" alt="砂窩薑葱麵" />
 		</div><!--grid_thumb-->
 
 
