--- a/chinese/soups.html
+++ b/chinese/soups.html
@@ -117,6 +117,15 @@
 			</div>
 			<img src="../images/dishes/2_soups/goldsilver_s.jpg" alt="金銀菜燉豬肺湯" />
 		</div><!--grid_thumb-->
+        
+        
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>野菌螺頭炖土雞</h1>
+				<p class="price">$58<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/2_soups/mushroomchick_s.jpg" alt="野菌螺頭炖土雞" />
+		</div><!--grid_thumb-->
 
 
 
