--- a/english/noodles_rices.html
+++ b/english/noodles_rices.html
@@ -86,12 +86,19 @@
 		</div><!--grid_thumb-->
 
 
-        <div class="grid_thumb">
+        <!--<div class="grid_thumb">
 			<div class="heading">
 				<h1>Fried rice with sea urchin meat, black truffle and egg white</h1>
 				<p class="price">$28<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/trufflerice_s.jpg" alt="Fried rice with sea urchin meat, black truffle and egg white" />
+		</div>grid_thumb-->
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>Stir-fried noodles with ginger and green scallions served in casserole</h1>
+				<p class="price">$16<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/7_noodlesandrice/hotpotnoodle_s.jpg" alt="Stir-fried noodles with ginger and green scallions served in casserole" />
 		</div><!--grid_thumb-->
 
 
