--- a/english/soups.html
+++ b/english/soups.html
@@ -119,6 +119,15 @@
 			</div>
 			<img src="../images/dishes/2_soups/goldsilver_s.jpg" alt="Double-boiled pigs lung, pork, fresh and preserved cabbage soup" />
 		</div><!--grid_thumb-->
+        
+        
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>Double-boiled assorted mushrooms, conch meat and chicken soup</h1>
+				<p class="price">$58<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/2_soups/mushroomchick_s.jpg" alt="Double-boiled assorted mushrooms, conch meat and chicken soup" />
+		</div><!--grid_thumb-->
 
 
 
