Prune Sauce Duck, change from Reg to Half

--- a/chinese/bbq.html
+++ b/chinese/bbq.html
@@ -58,10 +58,10 @@
 
         <div class="grid_thumb">
 			<div class="heading">
-                <h1>梅子燒鴨(例)</h1>
+                <h1>梅子燒鴨(半隻)</h1>
 				<p class="price">$22<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/3_bbq/plumgeese_s.jpg" alt="梅子燒鴨 (例)" />
+			<img src="../images/dishes/3_bbq/plumgeese_s.jpg" alt="梅子燒鴨" />
 		</div><!--grid_thumb-->
 
 
