--- a/english/bbq.html
+++ b/english/bbq.html
@@ -60,7 +60,7 @@
 
         <div class="grid_thumb">
 			<div class="heading">
-                <h1  class="threerow">Barbequed duck marinated with prune sauce (Reg.)</h1>
+                <h1  class="threerow">Barbequed duck marinated with prune sauce (Half)</h1>
 				<p class="price">$22<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/3_bbq/plumgeese_s.jpg" alt="Barbequed duck marinated with prune sauce" />
