--- a/english/bbq_list.html
+++ b/english/bbq_list.html
@@ -68,7 +68,7 @@
         
         <li class="list_item">
 			<div class="heading">
-				<h1>Barbequed duck marinated with prune sauce (Reg.)</h1>
+				<h1>Barbequed duck marinated with prune sauce (Half)</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
