--- a/chinese/bbq_list.html
+++ b/chinese/bbq_list.html
@@ -66,13 +66,13 @@
         
         <li class="list_item">
 			<div class="heading">
-				<h1>梅子燒鴨(例)</h1>
+				<h1>梅子燒鴨(半隻)</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
 				<p class="price">$22<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/3_bbq/plumgeese_l.jpg" alt="梅子燒鴨(例)" />
+			<img src="../images/dishes/3_bbq/plumgeese_l.jpg" alt="梅子燒鴨(半隻)" />
 		</li><!--list_item-->
         
         <li class="list_item">
