--- a/chinese/bbq.html
+++ b/chinese/bbq.html
@@ -128,7 +128,7 @@
 
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>砂窩啫啫走地雞 (半隻)   </h1>
+				<h1 class="tworow">砂窩啫啫走地雞<br />(半隻)</h1>
 				<p class="price">$26<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/3_bbq/jehjeh_s.jpg" alt="砂窩啫啫走地雞(半隻)" />
