Add adv. order legend & sirloin price change

--- a/chinese/soups_list.html
+++ b/chinese/soups_list.html
@@ -71,7 +71,7 @@
 				<h1>靈芝天麻燉魚頭</h1>
                 <p class="desc"></p>
                 <div class="tags">
-                	<p>預訂</p>
+                	<p><span class="adv_order_icon"></span> 預訂</p>
                 </div>
 				<p class="price">$68<sup>.80</sup></p>
 			</div>
@@ -83,7 +83,7 @@
 				<h1>靈芝石斛洋參燉老鴿</h1>
                 <p class="desc"></p>
                 <div class="tags">
-                	<p>預訂</p>
+                	<p><span class="adv_order_icon"></span> 預訂</p>
                 </div>
 				<p class="price">$68<sup>.80</sup></p>
 			</div>
@@ -95,7 +95,7 @@
 				<h1>瑤柱竹笙燉節瓜</h1>
                 <p class="desc"></p>
                 <div class="tags">
-                	<p>預訂</p>
+                	<p><span class="adv_order_icon"></span> 預訂</p>
                 </div>
 				<p class="price">$48<sup>.80</sup></p>
 			</div>
@@ -107,7 +107,7 @@
 				<h1>礦泉水花膠肉汁湯</h1>
                 <p class="desc"></p>
                 <div class="tags">
-                	<p>預訂</p>
+                	<p><span class="adv_order_icon"></span> 預訂</p>
                 </div>
 				<p class="price">$88<sup>.80</sup></p>
 			</div>
@@ -119,7 +119,7 @@
 				<h1>黑松露燉螺片乾貝</h1>
                 <p class="desc"></p>
                 <div class="tags">
-                	<p>預訂</p>
+                	<p><span class="adv_order_icon"></span> 預訂</p>
                 </div>
 				<p class="price">$88<sup>.80</sup></p>
 			</div>
@@ -142,7 +142,7 @@
 				<h1>金銀菜燉豬肺湯</h1>
                 <p class="desc"></p>
                 <div class="tags">
-                	<p>預訂</p>
+                	<p><span class="adv_order_icon"></span> 預訂</p>
                 </div>
 				<p class="price">$38<sup>.80</sup></p>
 			</div>
