--- a/english/soups_list.html
+++ b/english/soups_list.html
@@ -73,7 +73,7 @@
 				<h1>Double-boiled fish head with granoderma and pork soup</h1>
                 <p class="desc"></p>
                 <div class="tags">
-                	<p>Advance Order</p>
+                	<p><span class="adv_order_icon"></span> Advance Order</p>
                 </div>
 				<p class="price">$68<sup>.80</sup></p>
 			</div>
@@ -85,7 +85,7 @@
 				<h1>Double-boiled squab with granoderma and American ginseng soup</h1>
                 <p class="desc"></p>
                 <div class="tags">
-                	<p>Advance Order</p>
+                	<p><span class="adv_order_icon"></span> Advance Order</p>
                 </div>
 				<p class="price">$68<sup>.80</sup></p>
 			</div>
@@ -97,7 +97,7 @@
 				<h1>Double-boiled hairy melon, dried scallop, bamboo pith and pork soup</h1>
                 <p class="desc"></p>
                 <div class="tags">
-                	<p>Advance Order</p>
+                	<p><span class="adv_order_icon"></span> Advance Order</p>
                 </div>
 				<p class="price">$48<sup>.80</sup></p>
 			</div>
@@ -109,7 +109,7 @@
 				<h1>Fish maw double-boiled in stock</h1>
                 <p class="desc"></p>
                 <div class="tags">
-                	<p>Advance Order</p>
+                	<p><span class="adv_order_icon"></span> Advance Order</p>
                 </div>
 				<p class="price">$88<sup>.80</sup></p>
 			</div>
@@ -121,7 +121,7 @@
 				<h1>Double-boiled black truffle, dried scallops and conch meat soup</h1>
                 <p class="desc"></p>
                 <div class="tags">
-                	<p>Advance Order</p>
+                	<p><span class="adv_order_icon"></span> Advance Order</p>
                 </div>
 				<p class="price">$88<sup>.80</sup></p>
 			</div>
@@ -144,7 +144,7 @@
 				<h1>Double-boiled pigs lung, pork, fresh and preserved cabbage soup</h1>
                 <p class="desc"></p>
                 <div class="tags">
-                	<p>Advance Order</p>
+                	<p><span class="adv_order_icon"></span> Advance Order</p>
                 </div>
 				<p class="price">$38<sup>.80</sup></p>
 			</div>
