--- a/chinese/bbq_list.html
+++ b/chinese/bbq_list.html
@@ -135,7 +135,7 @@
 				<h1>頤東一品雞 (半隻)</h1>
                 <p class="desc"></p>
                 <div class="tags">
-                	<p>預訂</p>
+                	<p><span class="adv_order_icon"></span> 預訂</p>
                 </div>
 				<p class="price">$18<sup>.80</sup></p>
 			</div>
