--- a/english/bbq_list.html
+++ b/english/bbq_list.html
@@ -137,7 +137,7 @@
 				<h1>Special Yi Dong deep-fried chicken trimmed with fresh fruit salad (Half)</h1>
                 <p class="desc"></p>
                 <div class="tags">
-                	<p>Advance Order</p>
+                	<p><span class="adv_order_icon"></span> Advance Order</p>
                 </div>
 				<p class="price">$18<sup>.80</sup></p>
 			</div>
