Add 4 new items

--- a/chinese/soups.html
+++ b/chinese/soups.html
@@ -51,13 +51,13 @@
 		</div><!--grid_thumb-->
 
 
-        <!--<div class="grid_thumb">
+        <div class="grid_thumb">
 			<div class="heading">
-				<h1>海馬遼參養生湯</h1>
-				<p class="price">$88<sup>.80</sup></p>
+				<h1>瑪卡老鴿湯</h1>
+				<p class="price">$78<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/2_soups/seahorsesoup_s.jpg" alt="海馬遼參養生湯" />
-		</div>grid_thumb-->
+			<img src="../images/dishes/2_soups/macasoup_s.jpg" alt="瑪卡老鴿湯" />
+		</div><!--grid_thumb-->
 
 
         <div class="grid_thumb">
