--- a/chinese/specialties_luxury.html
+++ b/chinese/specialties_luxury.html
@@ -188,6 +188,14 @@
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/bakedchicken_s.jpg" alt="黑松露煎焗雞件" />
 		</div><!--grid_thumb-->
+        
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>黑松露生炒龍蝦</h1>
+				<p class="price seasonal">時價</p>
+			</div>
+			<img src="../images/dishes/5_specialties_shanzhen/blklobster_s.jpg" alt="黑松露生炒龍蝦" />
+		</div><!--grid_thumb-->
 
 
 
