--- a/english/specialties_luxury.html
+++ b/english/specialties_luxury.html
@@ -189,7 +189,16 @@
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/bakedchicken_s.jpg" alt="Pan-fried and baked boneless chicken with black truffle" />
 		</div><!--grid_thumb-->
+        
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>Stir-fried live lobster with black truffle in spicy sauce</h1>
+				<p class="price seasonal">Seasonal</p>
+			</div>
+			<img src="../images/dishes/5_specialties_shanzhen/blklobster_s.jpg" alt="Stir-fried live lobster with black truffle in spicy sauce" />
+		</div><!--grid_thumb-->
 
+		
 
 
 
