--- a/english/soups.html
+++ b/english/soups.html
@@ -53,13 +53,13 @@
 		</div><!--grid_thumb-->
 
 
-        <!--<div class="grid_thumb">
+        <div class="grid_thumb">
 			<div class="heading">
-				<h1>Double-boiled dried seahorse with dried scallops and spike sea cucumber soup</h1>
-				<p class="price">$88<sup>.80</sup></p>
+				<h1>Double-boiled squab and maca soup</h1>
+				<p class="price">$78<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/2_soups/seahorsesoup_s.jpg" alt="Double-boiled dried seahorse with dried scallops and spike sea cucumber soup" />
-		</div>grid_thumb-->
+			<img src="../images/dishes/2_soups/macasoup_s.jpg" alt="Double-boiled squab and maca soup" />
+		</div><!--grid_thumb-->
 
 
         <div class="grid_thumb">
