--- a/english/homestyle_list.html
+++ b/english/homestyle_list.html
@@ -83,13 +83,13 @@
         
         <li class="list_item"> 
             <div class="heading">
-				<h1>Stir-fried live lobster with black truffle in spicy sauce</h1>
+				<h1>Stir-fried vermicelli and scrambled egg with black truffle paste</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
 				<p class="price">$16<sup>.80</sup></p>
 			</div>
-            <img src="../images/dishes/11_homestyle/truffleladyegg_l.jpg" alt="Stir-fried live lobster with black truffle in spicy sauce" />
+            <img src="../images/dishes/11_homestyle/truffleladyegg_l.jpg" alt="Stir-fried vermicelli and scrambled egg with black truffle paste" />
 		</li><!--list_item-->
         
         <li class="list_item"> 
