2 items promo & add 1 item to Bird's Nest Section

--- a/chinese/birdsnest_swimbladder_seacucumber.html
+++ b/chinese/birdsnest_swimbladder_seacucumber.html
@@ -66,7 +66,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>陳醋浸遼參 (1條)</h1>
-				<p class="price ">$33<sup>.80</sup></p>
+				<p class="price ">$28<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/4_birdnest/vinegarseacucumber_s.jpg" alt="陳醋浸遼參" />
 		</div><!--grid_thumb-->
@@ -91,7 +91,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>鮑汁遼參 (1條)</h1>
-				<p class="price ">$33<sup>.80</sup></p>
+				<p class="price ">$28<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/4_birdnest/abaloneseacucumber_s.jpg" alt="鮑汁遼參" />
 		</div><!--grid_thumb-->
@@ -106,6 +106,14 @@
 			<img src="../images/dishes/4_birdnest/trufflebirdsnest_s.jpg" alt="黑松露紅燒燕窩" />
 		</div><!--grid_thumb-->
 
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>原隻花膠皇 (足10位用)</h1>
+				<p class="price">$288<sup>.00</sup>
+                </p>
+			</div>
+			<img src="../images/dishes/4_birdnest/wholefishmaw_s.jpg" alt="原隻花膠皇" />
+		</div><!--grid_thumb-->
 
 
 
