Add orig. price line-thru to grid thumb page

--- a/english/birdsnest_swimbladder_seacucumber.html
+++ b/english/birdsnest_swimbladder_seacucumber.html
@@ -67,7 +67,11 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>Spike sea cucumber soaked in vinegar</h1>
-				<p class="price ">$28<sup>.80</sup></p>
+				<p class="price special">$28<sup>.80</sup>
+                <span class="outer">
+                        <span class="inner">$33.80</span>
+                    </span>
+                </p>
 			</div>
 			<img src="../images/dishes/4_birdnest/vinegarseacucumber_s.jpg" alt="Spike sea cucumber soaked in vinegar" />
 		</div><!--grid_thumb-->
@@ -92,7 +96,11 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>Braised spike sea cucumber with abalone sauce</h1>
-				<p class="price ">$28<sup>.80</sup></p>
+				<p class="price special">$28<sup>.80</sup>
+                <span class="outer">
+                        <span class="inner">$33.80</span> 
+                    </span>
+                </p>
 			</div>
 			<img src="../images/dishes/4_birdnest/abaloneseacucumber_s.jpg" alt="Braised spike sea cucumber with abalone sauce" />
 		</div><!--grid_thumb-->
@@ -110,10 +118,13 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>Stewed whole premium fish maw trimmed with pea sprouts (for 10 persons)</h1>
-				<p class="price">$288<sup>.00</sup>
+				<p class="price special">$288<sup>.00</sup>
+                <span class="outer">
+                        <span class="inner">$388.00</span>
+                    </span>
                 </p>
 			</div>
-			<img src="../images/dishes/4_birdnest/wholefishmaw_s.jpg" alt="原隻花膠皇" />
+			<img src="../images/dishes/4_birdnest/wholefishmaw_s.jpg" alt="Stewed whole premium fish maw trimmed with pea sprouts" />
 		</div><!--grid_thumb-->
 
 
