--- a/chinese/birdsnest_swimbladder_seacucumber.html
+++ b/chinese/birdsnest_swimbladder_seacucumber.html
@@ -66,7 +66,11 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>陳醋浸遼參 (1條)</h1>
-				<p class="price ">$28<sup>.80</sup></p>
+				<p class="price special">$28<sup>.80</sup>
+                <span class="outer">
+                        <span class="inner">$33.80</span>
+                    </span>
+                </p>
 			</div>
 			<img src="../images/dishes/4_birdnest/vinegarseacucumber_s.jpg" alt="陳醋浸遼參" />
 		</div><!--grid_thumb-->
@@ -91,7 +95,11 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>鮑汁遼參 (1條)</h1>
-				<p class="price ">$28<sup>.80</sup></p>
+				<p class="price special">$28<sup>.80</sup>
+                <span class="outer">
+                        <span class="inner">$33.80</span>
+                    </span>
+                </p>
 			</div>
 			<img src="../images/dishes/4_birdnest/abaloneseacucumber_s.jpg" alt="鮑汁遼參" />
 		</div><!--grid_thumb-->
@@ -109,7 +117,10 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1 class="tworow">原隻花膠皇 <br />(足10位用)</h1>
-				<p class="price">$288<sup>.00</sup>
+				<p class="price special">$288<sup>.00</sup>
+                <span class="outer">
+                        <span class="inner">$388.00</span>
+                    </span>
                 </p>
 			</div>
 			<img src="../images/dishes/4_birdnest/wholefishmaw_s.jpg" alt="原隻花膠皇" />
