swap 2 images, remove 2 items 2015-05-12
swap 2 images: 脆皮海鮮酥 and 脆炸黑松露鮮蝦卷
hide 2 items: 米湯浸羊肚菌 and 青芥汁煎焗牛肝菌

--- a/chinese/specialties_luxury.html
+++ b/chinese/specialties_luxury.html
@@ -112,13 +112,13 @@
 
 
 
-        <div class="grid_thumb">
+        <!--<div class="grid_thumb">
 			<div class="heading">
 				<h1>米湯浸羊肚菌</h1>
 				<p class="price">$18<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/lambbelly_s.jpg" alt="米湯浸羊肚菌" />
-		</div><!--grid_thumb-->
+		</div>--><!--grid_thumb-->
 
 
 
@@ -151,13 +151,13 @@
 
 
 
-        <div class="grid_thumb">
+        <!--<div class="grid_thumb">
 			<div class="heading">
 				<h1>青芥汁煎焗牛肝菌</h1>
 				<p class="price">$20<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/mustardmushroom_s.jpg" alt="青芥汁煎焗牛肝菌" />
-		</div><!--grid_thumb-->
+		</div>--><!--grid_thumb-->
 
 
 
