--- a/english/specialties_luxury.html
+++ b/english/specialties_luxury.html
@@ -113,13 +113,13 @@
 
 
 
-        <div class="grid_thumb">
+        <!--<div class="grid_thumb">
 			<div class="heading">
 				<h1>Stewed morel mushrooms and asparagus in rice soup</h1>
 				<p class="price">$18<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/lambbelly_s.jpg" alt="Stewed morel mushrooms and asparagus in rice soup" />
-		</div><!--grid_thumb-->
+		</div>--><!--grid_thumb-->
 
 
 
@@ -152,13 +152,13 @@
 
 
 
-        <div class="grid_thumb">
+        <!--<div class="grid_thumb">
 			<div class="heading">
 				<h1>Pan-fried and baked boletus with wasabi sauce</h1>
 				<p class="price">$20<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/mustardmushroom_s.jpg" alt="Pan-fried and baked boletus with wasabi sauce" />
-		</div><!--grid_thumb-->
+		</div>--><!--grid_thumb-->
 
 
 
