--- a/chinese/specialties_luxury.html
+++ b/chinese/specialties_luxury.html
@@ -196,7 +196,14 @@
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/blklobster_s.jpg" alt="黑松露生炒龍蝦" />
 		</div><!--grid_thumb-->
-
+		
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>生炆龍躉尾</h1>
+				<p class="price">$68<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/5_specialties_shanzhen/stewedfreshlingcod_s.jpg" alt="生炆龍躉尾" />
+		</div><!--grid_thumb-->
 
 
 
