--- a/english/specialties_luxury.html
+++ b/english/specialties_luxury.html
@@ -198,7 +198,13 @@
 			<img src="../images/dishes/5_specialties_shanzhen/blklobster_s.jpg" alt="Stir-fried live lobster with black truffle in spicy sauce" />
 		</div><!--grid_thumb-->
 
-		
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1>Stewed fresh lingcod tail with pumpkin or bitter gourd or in brown sauce</h1>
+				<p class="price">$68<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/5_specialties_shanzhen/stewedfreshlingcod_s.jpg" alt="Stewed fresh lingcod tail with pumpkin or bitter gourd or in brown sauce" />
+		</div><!--grid_thumb-->
 
 
 
