add and delete dishes july20
Add and delete dishes july20

--- a/chinese/bbq.html
+++ b/chinese/bbq.html
@@ -72,6 +72,15 @@
 			</div>
 			<img src="../images/dishes/3_bbq/macaubbq_s.jpg" alt="澳門燒肉(例)" />
 		</div><!--grid_thumb-->
+        
+        
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>黑松露吊燒雞 (隻)</h1>
+				<p class="price">$62<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/3_bbq/marinatedchicken_s.jpg" alt="黑松露吊燒雞 (隻)" />
+		</div><!--grid_thumb-->
 
 
         <!--<div class="grid_thumb">
@@ -109,13 +118,13 @@
 		</div><!--grid_thumb-->
 
 
-        <div class="grid_thumb">
+        <!--<div class="grid_thumb">
 			<div class="heading">
 				<h1>頤東一品雞 (半隻)</h1>
 				<p class="price">$19<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/3_bbq/bestchicken_s.jpg" alt="頤東一品雞" />
-		</div><!--grid_thumb-->
+		</div>--><!--grid_thumb-->
 
 
         <div class="grid_thumb">
