--- a/chinese/starters_list.html
+++ b/chinese/starters_list.html
@@ -71,7 +71,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$5<sup>.98</sup></p>
+				<p class="price">$6<sup>.95</sup></p>
 			</div>
 			<img src="../images/dishes/1_starters/onionjudae_l.jpg" alt="洋蔥拌雲耳" />
 		</li><!--list_item-->
@@ -104,9 +104,20 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$5<sup>.98</sup></p>
+				<p class="price">$6<sup>.95</sup></p>
 			</div>
 			<img src="../images/dishes/1_starters/vinegaregg_l.jpg" alt="陳醋酸薑皮蛋" />
+		</li><!--list_item-->
+        
+        <li class="list_item">
+			<div class="heading">
+				<h1>涼拌海草</h1>
+                <p class="desc"></p>
+                <div class="tags">
+                </div>
+				<p class="price">$6<sup>.95</sup></p>
+			</div>
+			<img src="../images/dishes/1_starters/spicykelp salad_l.jpg" alt="涼拌海草" />
 		</li><!--list_item-->
         
         <li class="list_item">
@@ -115,7 +126,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$5<sup>.98</sup></p>
+				<p class="price">$6<sup>.95</sup></p>
 			</div>
 			<img src="../images/dishes/1_starters/raddishstick_l.jpg" alt="風味蘿蔔條" />
 		</li><!--list_item-->
