--- a/english/bbq.html
+++ b/english/bbq.html
@@ -74,6 +74,14 @@
 			</div>
 			<img src="../images/dishes/3_bbq/macaubbq_s.jpg" alt="Crispy barbequed pork belly" />
 		</div><!--grid_thumb-->
+        
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1 class="tworow">Roasted black truffle marinated chicken (whole)</h1>
+				<p class="price">$62<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/3_bbq/marinatedchicken_s.jpg" alt="Roasted black truffle marinated chicken (whole)" />
+		</div><!--grid_thumb-->
 
 
         <!--<div class="grid_thumb">
@@ -111,13 +119,13 @@
 		</div><!--grid_thumb-->
 
 
-        <div class="grid_thumb">
+        <!--<div class="grid_thumb">
 			<div class="heading">
 				<h1 class="threerow">Special Yi Dong deep-fried chicken trimmed with fresh fruit salad (Half)</h1>
 				<p class="price">$19<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/3_bbq/bestchicken_s.jpg" alt="頤東一品雞" />
-		</div><!--grid_thumb-->
+		</div>--><!--grid_thumb-->
 
 
         <div class="grid_thumb">
