--- a/chinese/hotpot_list.html
+++ b/chinese/hotpot_list.html
@@ -64,13 +64,13 @@
 				<p class="price">$20<sup>.80</sup></p>
 			</div>-->
             
-            <div class="heading">
+            <!--<div class="heading">
 				<h1>古法炆羊腩煲</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
 				<p class="price">$26<sup>.80</sup></p>
-			</div>
+			</div>-->
             
             <div class="heading">
 				<h1>支竹火腩生蠔煲</h1>
