--- a/english/hotpot_list.html
+++ b/english/hotpot_list.html
@@ -66,13 +66,13 @@
 				<p class="price">$20<sup>.80</sup></p>
 			</div>-->
             
-            <div class="heading">
+            <!--<div class="heading">
 				<h1>Stewed lamb belly in casserole</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
 				<p class="price">$26<sup>.80</sup></p>
-			</div>
+			</div>-->
             
             <div class="heading">
 				<h1>Stewed oysters and barbequed pork belly casserole</h1>
