spick kelp saladimage

--- a/chinese/starters.html
+++ b/chinese/starters.html
@@ -102,7 +102,7 @@
 				<h1>涼拌海草</h1>
 				<p class="price">$6<sup>.95</sup></p>
 			</div>
-			<img src="../images/dishes/1_starters/spicykelp salad_s.jpg" alt="涼拌海草" />
+			<img src="../images/dishes/1_starters/spicykelpsalad_s.jpg" alt="涼拌海草" />
 		</div><!--grid_thumb-->
 
         
