--- a/chinese/starters_list.html
+++ b/chinese/starters_list.html
@@ -117,7 +117,7 @@
                 </div>
 				<p class="price">$6<sup>.95</sup></p>
 			</div>
-			<img src="../images/dishes/1_starters/spicykelp salad_l.jpg" alt="涼拌海草" />
+			<img src="../images/dishes/1_starters/spicykelpsalad_l.jpg" alt="涼拌海草" />
 		</li><!--list_item-->
         
         <li class="list_item">
