--- a/english/starters.html
+++ b/english/starters.html
@@ -104,7 +104,7 @@
 				<h1 class="tworow">Spicy kelp salad</h1>
 				<p class="price">$6<sup>.95</sup></p>
 			</div>
-			<img src="../images/dishes/1_starters/spicykelp salad_s.jpg" alt="Spicy kelp salad" />
+			<img src="../images/dishes/1_starters/spicykelpsalad_s.jpg" alt="Spicy kelp salad" />
 		</div><!--grid_thumb-->
 
         
