--- a/english/starters_list.html
+++ b/english/starters_list.html
@@ -120,7 +120,7 @@
                 </div>
 				<p class="price">$6<sup>.95</sup></p>
 			</div>
-			<img src="../images/dishes/1_starters/spicykelp salad_l.jpg" alt="Spicy kelp salad" />
+			<img src="../images/dishes/1_starters/spicykelpsalad_l.jpg" alt="Spicy kelp salad" />
 		</li><!--list_item-->
         
         <li class="list_item">
