shorten the 'Matsutake and Kig Oyster Mushrooms' to &

--- a/english/specialties_luxury.html
+++ b/english/specialties_luxury.html
@@ -79,10 +79,10 @@
         
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>Pan-fried Beef Shoulder Tender with Lemongrass, Matsutake and Kig Oyster Mushrooms</h1>
+				<h1>Pan-fried Beef Shoulder Tender with Lemongrass, Matsutake & Kig Oyster Mushrooms</h1>
 				<p class="price">$29<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/5_specialties_shanzhen/panfried_beef_shoulder_tender_with_lemongrass_s.jpg" alt="Pan-fried Beef Shoulder Tender with Lemongrass, Matsutake and Kig Oyster Mushrooms" />
+			<img src="../images/dishes/5_specialties_shanzhen/panfried_beef_shoulder_tender_with_lemongrass_s.jpg" alt="Pan-fried Beef Shoulder Tender with Lemongrass, Matsutake & Kig Oyster Mushrooms" />
 		</div><!--grid_thumb-->
 
 
