shorten 'Matsutake and Kig Oyster Mushrooms' to &

--- a/english/specialties_heart.html
+++ b/english/specialties_heart.html
@@ -188,7 +188,7 @@
         
         <!--<div class="grid_thumb">
 			<div class="heading">
-				<h1>Charcoal grilled <br />sirloin steak</h1>
+				<h1>Charcoal grilled <br />sirloin steak</h1> o
 				<p class="price">$56<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/6_specialties_xinyi/sirloin_s.jpg" alt="Charcoal grilled sirloin steak" />
