--- a/chinese/heart_list.html
+++ b/chinese/heart_list.html
@@ -220,6 +220,17 @@
 			<img src="../images/dishes/6_specialties_xinyi/blackpepperbeef_l.jpg" alt="黑椒茄瓜焗牛仔骨" />
 		</li><!--list_item-->
         
+        <li class="list_item">
+			<div class="heading">
+				<h1>燒焗牛肋骨</h1>
+                <p class="desc"></p>
+                <div class="tags">
+                </div>
+				<p class="price">$52<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/6_specialties_xinyi/charcoalgrilledbbsrf_l.jpg" alt="燒焗牛肋骨" />
+		</li><!--list_item-->
+        
         <!--<li class="list_item">
 			<div class="heading">
 				<h1>炭燒西冷扒</h1>
