--- a/chinese/noodles_rices.html
+++ b/chinese/noodles_rices.html
@@ -42,7 +42,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>X.O.醬星洲炒米粉</h1>
-				<p class="price">$16<sup>.80</sup></p>
+				<p class="price">$19<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/xonoodles_s.jpg" alt="xo醬星洲炒米粉" />
 		</div><!--grid_thumb-->
@@ -50,8 +50,8 @@
 
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>松茸牛肉炒河粉</h1>
-				<p class="price">$18<sup>.80</sup></p>
+				<h1>松茸牛肩肉炒河</h1>
+				<p class="price">$22<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/beefnoodle_s.jpg" alt="松茸牛肉炒河粉" />
 		</div><!--grid_thumb-->
@@ -60,7 +60,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>臘味生炒糯米飯</h1>
-				<p class="price">$16<sup>.80</sup></p>
+				<p class="price">$19<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/porkrice_s.jpg" alt="臘味生炒糯米飯" />
 		</div><!--grid_thumb-->
@@ -69,7 +69,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>蝦醬頭抽肉鬆炒飯</h1>
-				<p class="price">$14<sup>.80</sup></p>
+				<p class="price">$18<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/shrimprice_s.jpg" alt="蝦醬頭抽肉鬆炒飯" />
 		</div><!--grid_thumb-->
@@ -78,7 +78,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>豉油皇炒麵</h1>
-				<p class="price">$14<sup>.80</sup></p>
+				<p class="price">$16<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/soysaucenoodle_s.jpg" alt="豉油皇炒麵" />
 		</div><!--grid_thumb-->
