--- a/chinese/soups.html
+++ b/chinese/soups.html
@@ -134,6 +134,14 @@
 			</div>
 			<img src="../images/dishes/2_soups/mushroomchick_s.jpg" alt="野菌螺頭炖土雞" />
 		</div><!--grid_thumb-->
+        
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>黑蒜安康豬肉排湯</h1>
+				<p class="price">$68<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/2_soups/doubleboiledbgps_s.jpg" alt="黑蒜安康豬肉排湯" />
+		</div><!--grid_thumb-->
 
 
 
