--- a/chinese/specialties_heart.html
+++ b/chinese/specialties_heart.html
@@ -182,6 +182,14 @@
 			<img src="../images/dishes/6_specialties_xinyi/blackpepperbeef_s.jpg" alt="黑椒茄瓜焗牛仔骨" />
 		</div><!--grid_thumb-->
         
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>燒焗牛肋骨</h1>
+				<p class="price">$52<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/6_specialties_xinyi/charcoalgrilledbbsrf_s.jpg" alt="燒焗牛肋骨" />
+		</div><!--grid_thumb-->
+        
         <!--<div class="grid_thumb">
 			<div class="heading">
 				<h1>炭燒西冷扒</h1>
