--- a/english/bbq.html
+++ b/english/bbq.html
@@ -131,7 +131,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1 class="threerow">Marinated chicken trimmed with black truffle flakes (Half)</h1>
-				<p class="price">$26<sup>.80</sup></p>
+				<p class="price">$28<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/3_bbq/trufflechicken_s.jpg" alt="Marinated chicken trimmed with black truffle flakes" />
 		</div><!--grid_thumb-->
@@ -146,10 +146,10 @@
         
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>Marinated chicken trimmed with radish, red onion and pickles (Half)</h1>
-				<p class="price">$19<sup>.80</sup></p>
+				<h1>Chef Tony special charcoal grilled duck (Whole)</h1>
+				<p class="price">$62<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/3_bbq/upone_s.jpg" alt="Marinated chicken trimmed with radish, red onion and pickles" />
+			<img src="../images/dishes/3_bbq/cheftonyscgd_s.jpg" alt="Chef Tony special charcoal grilled duck" />
 		</div><!--grid_thumb-->
   
         
