--- a/english/birdsnest_etc_list.html
+++ b/english/birdsnest_etc_list.html
@@ -83,6 +83,10 @@
 			<div class="heading">
 				<h1>Spike sea cucumber soaked in vinegar</h1>
                 <p class="desc"></p>
+                <div class="tags">
+                </div>
+				<p class="price ">$33<sup>.80</sup></p>
+                <!--<p class="desc"></p>
                 <div class="tags special">
                 	<p>Special</p>
                 </div>
@@ -90,7 +94,7 @@
                 	<span class="outer">
                         <span class="inner">$33.80</span>
                     </span>
-                </p>
+                </p>-->
 			</div>
 			<img src="../images/dishes/4_birdnest/vinegarseacucumber_l.jpg" alt="Spike sea cucumber soaked in vinegar" />
 		</li><!--list_item-->
@@ -121,6 +125,10 @@
 			<div class="heading">
 				<h1>Braised spike sea cucumber with abalone sauce</h1>
                 <p class="desc"></p>
+                <div class="tags">
+                </div>
+				<p class="price ">$33<sup>.80</sup></p>
+                <!--<p class="desc"></p>
                 <div class="tags special">
                 	<p>Special</p>
                 </div>
@@ -128,7 +136,7 @@
                 	<span class="outer">
                         <span class="inner">$33.80</span>
                     </span>
-                </p>
+                </p>-->
 			</div>
 			<img src="../images/dishes/4_birdnest/abaloneseacucumber_l.jpg" alt="Braised spike sea cucumber with abalone sauce" />
 		</li><!--list_item-->
