--- a/english/birdsnest_swimbladder_seacucumber.html
+++ b/english/birdsnest_swimbladder_seacucumber.html
@@ -67,11 +67,12 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>Spike sea cucumber soaked in vinegar</h1>
-				<p class="price special">$28<sup>.80</sup>
+                <p class="price ">$33<sup>.80</sup></p>
+				<!--<p class="price special">$28<sup>.80</sup>
                 <span class="outer">
                         <span class="inner">$33.80</span>
                     </span>
-                </p>
+                </p>-->
 			</div>
 			<img src="../images/dishes/4_birdnest/vinegarseacucumber_s.jpg" alt="Spike sea cucumber soaked in vinegar" />
 		</div><!--grid_thumb-->
@@ -96,11 +97,12 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>Braised spike sea cucumber with abalone sauce</h1>
-				<p class="price special">$28<sup>.80</sup>
+                <p class="price ">$33<sup>.80</sup></p>
+				<!--<p class="price special">$28<sup>.80</sup>
                 <span class="outer">
                         <span class="inner">$33.80</span> 
                     </span>
-                </p>
+                </p>-->
 			</div>
 			<img src="../images/dishes/4_birdnest/abaloneseacucumber_s.jpg" alt="Braised spike sea cucumber with abalone sauce" />
 		</div><!--grid_thumb-->
