--- a/english/heart_list.html
+++ b/english/heart_list.html
@@ -222,6 +222,17 @@
 			<img src="../images/dishes/6_specialties_xinyi/blackpepperbeef_l.jpg" alt="Braised beef short rib with eggplant in black pepper sauce" />
 		</li><!--list_item-->
         
+        <li class="list_item">
+			<div class="heading">
+				<h1>Charcoal grilled and broiled beef short rib fillet</h1>
+                <p class="desc"></p>
+                <div class="tags">
+                </div>
+				<p class="price">$52<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/6_specialties_xinyi/charcoalgrilledbbsrf_l.jpg" alt="Charcoal grilled and broiled beef short rib fillet" />
+		</li><!--list_item-->
+        
         <!--<li class="list_item">
 			<div class="heading">
 				<h1>Charcoal grilled sirloin steak</h1>
