--- a/english/soups.html
+++ b/english/soups.html
@@ -136,6 +136,14 @@
 			</div>
 			<img src="../images/dishes/2_soups/mushroomchick_s.jpg" alt="Double-boiled assorted mushrooms, conch meat and chicken soup" />
 		</div><!--grid_thumb-->
+        
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>Double-boiled black garlic and pork spareribs soup</h1>
+				<p class="price">$68<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/2_soups/doubleboiledbgps_s.jpg" alt="Double-boiled black garlic and pork spareribs soup" />
+		</div><!--grid_thumb-->
 
 
 
