--- a/chinese/bbq_list.html
+++ b/chinese/bbq_list.html
@@ -163,7 +163,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$26<sup>.80</sup></p>
+				<p class="price">$28<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/3_bbq/trufflechicken_l.jpg" alt="黑松露撈雞" />
 		</li><!--list_item-->
@@ -181,13 +181,13 @@
         
         <li class="list_item">
 			<div class="heading">
-				<h1>撈起一品雞 (半隻)</h1>
+				<h1>明爐炭燒水鴨 (隻)</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$19<sup>.80</sup></p>
+				<p class="price">$62<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/3_bbq/upone_l.jpg" alt="撈起一品雞" />
+			<img src="../images/dishes/3_bbq/cheftonyscgd_l.jpg" alt="明爐炭燒水鴨 (隻)" />
 		</li><!--list_item-->
         
 	</ul>
