--- a/chinese/birdsnest_etc_list.html
+++ b/chinese/birdsnest_etc_list.html
@@ -81,6 +81,10 @@
 			<div class="heading">
 				<h1>陳醋浸遼參 (1條)</h1>
                 <p class="desc"></p>
+                <div class="tags">
+                </div>
+				<p class="price ">$33<sup>.80</sup></p>
+                <!--<p class="desc"></p>
                 <div class="tags special">
                 	<p>特價</p>
                 </div>
@@ -88,7 +92,7 @@
                 	<span class="outer">
                         <span class="inner">$33.80</span>
                     </span>
-                </p>
+                </p>-->
 			</div>
 			<img src="../images/dishes/4_birdnest/vinegarseacucumber_l.jpg" alt="陳醋浸遼參" />
 		</li><!--list_item-->
@@ -119,6 +123,10 @@
 			<div class="heading">
 				<h1>鮑汁遼參 (1條)</h1>
                 <p class="desc"></p>
+                <div class="tags">
+                </div>
+				<p class="price ">$33<sup>.80</sup></p>
+                <!--<p class="desc"></p>
                 <div class="tags special">
                 	<p>特價</p>
                 </div>
@@ -126,7 +134,7 @@
                     <span class="outer">
                         <span class="inner">$33.80</span>
                     </span>
-                </p>
+                </p>-->
 			</div>
 			<img src="../images/dishes/4_birdnest/abaloneseacucumber_l.jpg" alt="鮑汁遼參" />
 		</li><!--list_item-->
