--- a/chinese/noodlesrices_list.html
+++ b/chinese/noodlesrices_list.html
@@ -49,7 +49,7 @@
                 	<p>預訂</p>
                     <p>4位起</p>
                 </div>
-				<p class="price">$16<sup>.80</sup></p>
+				<p class="price">$19<sup>.80</sup></p>
 			</div>
                     <img src="../images/dishes/7_noodlesandrice/xonoodles_l.jpg" alt="xo醬星洲炒米粉" />
             
@@ -57,11 +57,11 @@
         
         <li class="list_item">
 			<div class="heading">
-				<h1>松茸牛肉炒河粉</h1>
+				<h1>松茸牛肩肉炒河</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$18<sup>.80</sup></p>
+				<p class="price">$22<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/beefnoodle_l.jpg" alt="松茸牛肉炒河粉" />
 		</li><!--list_item-->
@@ -72,7 +72,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$16<sup>.80</sup></p>
+				<p class="price">$19<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/porkrice_l.jpg" alt="臘味生炒糯米飯" />
 		</li><!--list_item-->
@@ -83,7 +83,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$14<sup>.80</sup></p>
+				<p class="price">$18<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/shrimprice_l.jpg" alt="蝦醬頭抽肉鬆炒飯" />
 		</li><!--list_item-->
@@ -94,7 +94,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$14<sup>.80</sup></p>
+				<p class="price">$16<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/soysaucenoodle_l.jpg" alt="豉油皇炒麵" />
 		</li><!--list_item-->
