--- a/chinese/specialties_luxury.html
+++ b/chinese/specialties_luxury.html
@@ -218,6 +218,21 @@
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/stewedfreshlingcod_s.jpg" alt="生炆龍躉尾" />
 		</div><!--grid_thumb-->
+        
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>松茸炒豬肋肉</h1>
+				<p class="price">$29<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/5_specialties_shanzhen/stirfriendpsfwm_s.jpg" alt="松茸炒豬肋肉" />
+		</div><!--grid_thumb-->
+        
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>特味茄瓜炒龍蝦</h1>
+				<p class="price seasonal">時價</p>
+			</div>
+			<img src="../images/dishes/5_specialties_shanzhen/speciallobster_s.jpg" alt="特味茄瓜炒龍蝦" />
 
 
 
