--- a/chinese/starters.html
+++ b/chinese/starters.html
@@ -62,7 +62,7 @@
         <div class="grid_thumb">
 			<div class="heading">
                 <h1>洋蔥拌雲耳</h1>
-				<p class="price">$6<sup>.95</sup></p>
+				<p class="price">$7<sup>.98</sup></p>
 			</div>
 			<img src="../images/dishes/1_starters/onionjudae_s.jpg" alt="洋蔥拌雲耳" />
 		</div><!--grid_thumb-->
@@ -91,7 +91,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>陳醋酸薑皮蛋</h1>
-				<p class="price">$6<sup>.95</sup></p>
+				<p class="price">$7<sup>.98</sup></p>
 			</div>
 			<img src="../images/dishes/1_starters/vinegaregg_s.jpg" alt="陳醋酸薑皮蛋" />
 		</div><!--grid_thumb-->
@@ -100,7 +100,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>涼拌海草</h1>
-				<p class="price">$6<sup>.95</sup></p>
+				<p class="price">$7<sup>.98</sup></p>
 			</div>
 			<img src="../images/dishes/1_starters/spicykelpsalad_s.jpg" alt="涼拌海草" />
 		</div><!--grid_thumb-->
@@ -110,7 +110,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>風味蘿蔔條</h1>
-				<p class="price">$6<sup>.95</sup></p>
+				<p class="price">$6<sup>.98</sup></p>
 			</div>
 			<img src="../images/dishes/1_starters/raddishstick_s.jpg" alt="風味蘿蔔條" />
 		</div><!--grid_thumb-->
@@ -120,7 +120,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>鬼馬油條沙律</h1>
-				<p class="price">$9<sup>.95</sup></p>
+				<p class="price">$9<sup>.98</sup></p>
 			</div>
 			<img src="../images/dishes/1_starters/friedsalad_s.jpg" alt="鬼馬油條沙律" />
 		</div><!--grid_thumb-->
@@ -144,9 +144,17 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>刀拍黃瓜</h1>
-				<p class="price">$6<sup>.98</sup></p>
+				<p class="price">$7<sup>.98</sup></p>
 			</div>
 			<img src="../images/dishes/1_starters/knifepickle_s.jpg" alt="刀拍黃瓜  " />
+		</div><!--grid_thumb-->
+        
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>頤東秘制蜆</h1>
+				<p class="price">$8<sup>.98</sup></p>
+			</div>
+			<img src="../images/dishes/1_starters/specialspicyclam_s.jpg" alt="頤東秘制蜆  " />
 		</div><!--grid_thumb-->
         
 
