--- a/english/specialties_heart.html
+++ b/english/specialties_heart.html
@@ -186,6 +186,14 @@
 			<img src="../images/dishes/6_specialties_xinyi/blackpepperbeef_s.jpg" alt="Braised beef short rib with eggplant in black pepper sauce" />
 		</div><!--grid_thumb-->
         
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>Charcoal grilled and broiled beef short rib fillet</h1>
+				<p class="price">$52<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/6_specialties_xinyi/charcoalgrilledbbsrf_s.jpg" alt="Charcoal grilled and broiled beef short rib fillet" />
+		</div><!--grid_thumb-->
+        
         <!--<div class="grid_thumb">
 			<div class="heading">
 				<h1>Charcoal grilled <br />sirloin steak</h1> o
