--- a/english/specialties_luxury.html
+++ b/english/specialties_luxury.html
@@ -219,6 +219,22 @@
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/stewedfreshlingcod_s.jpg" alt="Stewed fresh lingcod tail with pumpkin or bitter gourd or in brown sauce" />
 		</div><!--grid_thumb-->
+        
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>Stir-fried pork sparerib fillet with matsutake</h1>
+				<p class="price">$29<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/5_specialties_shanzhen/stirfriendpsfwm_s.jpg" alt="Stir-fried pork sparerib fillet with matsutake" />
+		</div><!--grid_thumb-->
+        
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>Stir-fried lobster with eggplant in homemade spicy sauce</h1>
+				<p class="price seasonal">Seasonal</p>
+			</div>
+			<img src="../images/dishes/5_specialties_shanzhen/speciallobster_s.jpg" alt="Stir-fried lobster with eggplant in homemade spicy sauce" />
+		</div><!--grid_thumb-->
 
 
 
