--- a/english/starters.html
+++ b/english/starters.html
@@ -64,7 +64,7 @@
         <div class="grid_thumb">
 			<div class="heading">
                 <h1 class="tworow">Hand tossed black fungus and onion slices</h1>
-				<p class="price">$6<sup>.95</sup></p>
+				<p class="price">$7<sup>.98</sup></p>
 			</div>
 			<img src="../images/dishes/1_starters/onionjudae_s.jpg" alt="Hand tossed black fungus and onion slices" />
 		</div><!--grid_thumb-->
@@ -93,7 +93,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1 class="tworow">Preserved egg slices trimmed with sour ginger</h1>
-				<p class="price">$6<sup>.95</sup></p>
+				<p class="price">$7<sup>.98</sup></p>
 			</div>
 			<img src="../images/dishes/1_starters/vinegaregg_s.jpg" alt="Preserved egg slices trimmed with sour ginger" />
 		</div><!--grid_thumb-->
@@ -102,7 +102,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1 class="tworow">Spicy kelp salad</h1>
-				<p class="price">$6<sup>.95</sup></p>
+				<p class="price">$7<sup>.98</sup></p>
 			</div>
 			<img src="../images/dishes/1_starters/spicykelpsalad_s.jpg" alt="Spicy kelp salad" />
 		</div><!--grid_thumb-->
@@ -112,7 +112,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1 class="tworow">Radish sticks soaked in spicy vinegar</h1>
-				<p class="price">$6<sup>.95</sup></p>
+				<p class="price">$6<sup>.98</sup></p>
 			</div>
 			<img src="../images/dishes/1_starters/raddishstick_s.jpg" alt="Radish sticks soaked in spicy vinegar" />
 		</div><!--grid_thumb-->
@@ -122,7 +122,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1 class="tworow">Chinese donut stuffed with shrimp paste</h1>
-				<p class="price">$9<sup>.95</sup></p>
+				<p class="price">$9<sup>.98</sup></p>
 			</div>
 			<img src="../images/dishes/1_starters/friedsalad_s.jpg" alt="Chinese donut stuffed with shrimp paste" />
 		</div><!--grid_thumb-->
@@ -146,9 +146,17 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1 class="tworow">Spicy English cucumber slices tossed with garlics</h1>
-				<p class="price">$6<sup>.98</sup></p>
+				<p class="price">$7<sup>.98</sup></p>
 			</div>
 			<img src="../images/dishes/1_starters/knifepickle_s.jpg" alt="Spicy English cucumber slices tossed with garlics  " />
+		</div><!--grid_thumb-->
+        
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1 class="tworow">Chef Tony special spicy clam</h1>
+				<p class="price">$8<sup>.98</sup></p>
+			</div>
+			<img src="../images/dishes/1_starters/specialspicyclam_s.jpg" alt="Chef Tony special spicy clam  " />
 		</div><!--grid_thumb-->
 
         
