--- a/chinese/bbq.html
+++ b/chinese/bbq.html
@@ -151,7 +151,13 @@
 			<img src="../images/dishes/3_bbq/cheftonyscgd_s.jpg" alt="明爐炭燒水鴨(隻)" />
 		</div><!--grid_thumb-->
         
-        
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>撈起一品雞 (半隻)</h1>
+				<p class="price">$19<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/3_bbq/upone_s.jpg" alt="撈起一品雞(半隻)" />
+		</div><!--grid_thumb-->
 
 	</div><!-- menu_body-->
 </div><!--wrapper-->
