--- a/english/bbq.html
+++ b/english/bbq.html
@@ -152,7 +152,14 @@
 			<img src="../images/dishes/3_bbq/cheftonyscgd_s.jpg" alt="Chef Tony special charcoal grilled duck" />
 		</div><!--grid_thumb-->
   
-        
+          <div class="grid_thumb">
+			<div class="heading">
+				<h1>Marinated chicken trimmed with radish, red onion and pickles (Half)</h1>
+				<p class="price">$19<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/3_bbq/upone_s.jpg" alt="Marinated chicken trimmed with radish, red onion and pickles" />
+		</div><!--grid_thumb-->
+  
         
 
 	</div><!-- menu_body-->
