--- a/chinese/birdsnest_etc_list.html
+++ b/chinese/birdsnest_etc_list.html
@@ -154,14 +154,17 @@
 			<div class="heading">
 				<h1>原隻花膠皇 (足10位用)</h1>
                 <p class="desc"></p>
-                <div class="tags special">
+                <div class="tags">
+                </div>
+				<p class="price ">$388<sup>.00</sup></p>
+                <!--<div class="tags special">
                 	<p>特價</p>
                 </div>
 				<p class="price">$328<sup>.00</sup>
                 	<span class="outer">
                         <span class="inner">$388.00</span>
                     </span>
-                </p>
+                </p>-->
 			</div>
 			<img src="../images/dishes/4_birdnest/wholefishmaw_l.jpg" alt="原隻花膠皇" />
 		</li><!--list_item-->
