--- a/chinese/birdsnest_swimbladder_seacucumber.html
+++ b/chinese/birdsnest_swimbladder_seacucumber.html
@@ -119,10 +119,11 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1 class="tworow">原隻花膠皇 <br />(足10位用)</h1>
-				<p class="price special">$328<sup>.00</sup>
+                <p class="price ">$388<sup>.00</sup></p>
+				<!--<p class="price special">$328<sup>.00</sup>
                 <span class="outer">
                         <span class="inner">$388.00</span>
-                    </span>
+                    </span>-->
                 </p>
 			</div>
 			<img src="../images/dishes/4_birdnest/wholefishmaw_s.jpg" alt="原隻花膠皇" />
