--- a/english/birdsnest_etc_list.html
+++ b/english/birdsnest_etc_list.html
@@ -156,13 +156,16 @@
 			<div class="heading">
 				<h1>Stewed whole premium fish maw trimmed with pea sprouts (for 10 persons)</h1>
                 <p class="desc"></p>
-                <div class="tags special">
+                <div class="tags">
+                </div>
+				<p class="price ">$388<sup>.80</sup></p>
+                <!--<div class="tags special">
                 </div>
 				<p class="price">$328<sup>.00</sup>
                 	<span class="outer">
                         <span class="inner">$388.00</span>
                     </span>
-                </p>
+                </p>-->
 			</div>
 			<img src="../images/dishes/4_birdnest/wholefishmaw_l.jpg" alt="Stewed whole premium fish maw trimmed with pea sprouts" />
 		</li><!--list_item-->
