--- a/english/specialties_luxury.html
+++ b/english/specialties_luxury.html
@@ -237,6 +237,13 @@
 		</div><!--grid_thumb-->
 
 
+        <div class="grid_thumb">
+                    <div class="heading">
+                        <h1>Stir-fried sea cucumber and beef shoulder tender with green scallion in bean sauce</h1>
+                        <p class="price">$42<sup>.80</sup></p>
+                    </div>
+                    <img src="../images/dishes/5_specialties_shanzhen/sfscucumber_s.jpg" alt="Stir-fried sea cucumber and beef shoulder tender with green scallion in bean sauce" />
+                </div><!--grid_thumb-->
 
 	</div><!-- menu_body-->
 </div><!--wrapper-->
