--- a/chinese/hotpot_list.html
+++ b/chinese/hotpot_list.html
@@ -78,7 +78,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$28<sup>.80</sup></p>
+				<p class="price">$36<sup>.80</sup></p>
 			</div>
             <img src="../images/dishes/10_casserole/stewedlambbelly_l.jpg" alt="古法炆羊腩煲" />
         	</li><!--list_item-->
@@ -148,6 +148,17 @@
 				<p class="price">$28<sup>.80</sup></p>
 			</div>
             <img src="../images/dishes/10_casserole/blackcod_l.jpg" alt="凉瓜黑魚煲" />
+        	</li><!--list_item-->
+            
+            <li class="list_item">
+            <div class="heading">
+				<h1>清湯羊腩煲</h1>
+                <p class="desc"></p>
+                <div class="tags">
+                </div>
+				<p class="price">$36<sup>.80</sup></p>
+			</div>
+            <img src="../images/dishes/10_casserole/slbradish_l.jpg" alt="清湯羊腩煲" />
         	</li><!--list_item-->
             
 	</ul>
