--- a/chinese/specialties_luxury.html
+++ b/chinese/specialties_luxury.html
@@ -233,7 +233,15 @@
 				<p class="price seasonal">時價</p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/speciallobster_s.jpg" alt="特味茄瓜炒龍蝦" />
-
+		</div><!--grid_thumb-->
+        
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>醬爆海参牛肩肉</h1>
+				<p class="price">$42<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/5_specialties_shanzhen/sfscucumber_s.jpg" alt="醬爆海参牛肩肉" />
+		</div><!--grid_thumb-->
 
 
 	</div><!-- menu_body-->
