--- a/english/birdsnest_swimbladder_seacucumber.html
+++ b/english/birdsnest_swimbladder_seacucumber.html
@@ -120,10 +120,11 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>Stewed whole premium fish maw trimmed with pea sprouts (for 10 persons)</h1>
-				<p class="price special">$328<sup>.00</sup>
+                <p class="price ">$388<sup>.00</sup></p>
+				<!--<p class="price special">$328<sup>.00</sup>
                 <span class="outer">
                         <span class="inner">$388.00</span>
-                    </span>
+                    </span>-->
                 </p>
 			</div>
 			<img src="../images/dishes/4_birdnest/wholefishmaw_s.jpg" alt="Stewed whole premium fish maw trimmed with pea sprouts" />
