--- a/english/hotpot_list.html
+++ b/english/hotpot_list.html
@@ -83,7 +83,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$28<sup>.80</sup></p>
+				<p class="price">$36<sup>.80</sup></p>
 			</div>
             <img src="../images/dishes/10_casserole/stewedlambbelly_l.jpg" alt="Stewed lamb belly in casserole" />
       		</li><!--list_item-->
@@ -152,6 +152,17 @@
 				<p class="price">$28<sup>.80</sup></p>
             </div>
 			<img src="../images/dishes/10_casserole/blackcod_l.jpg" alt="Black cod and bitter gourd casserole" />
+      		</li><!--list_item-->
+            
+            <li class="list_item">
+            <div class="heading">
+				<h1>Stewed lamb belly and radish with stock in casserole</h1>
+                <p class="desc"></p>
+                <div class="tags">
+                </div>
+				<p class="price">$36<sup>.80</sup></p>
+            </div>
+			<img src="../images/dishes/10_casserole/slbradish_l.jpg" alt="Stewed lamb belly and radish with stock in casserole" />
       		</li><!--list_item-->
         
 	</ul>
