--- a/english/abalone_sharkfin_list.html
+++ b/english/abalone_sharkfin_list.html
@@ -122,7 +122,7 @@
 			</div>
             
             <div class="heading">
-				<h1>Shark's fin stewed with chicken in hotpot (per person)</h1>
+				<h1>Shark's fin stewed with chicken in hotpot (per tael)</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
@@ -152,7 +152,7 @@
         <li class="list_item noimg">
             
             <div class="heading">
-				<h1>Shark's fin double-boiled with papaya (per person)</h1>
+				<h1>Shark's fin double-boiled with papaya (per tael)</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
@@ -166,7 +166,7 @@
 				<p class="price twoprices">$18<sup>.80</sup> /<br />$88<sup>.80</sup></p>
 			</div>
             <div class="heading">
-				<h1>Braised shark's fin with crabmeat in brown sauce (per person / regular)</h1>
+				<h1>Braised shark's fin with crabmeat in brown sauce (per person)</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
