--- a/chinese/abalone_sharkfin_list.html
+++ b/chinese/abalone_sharkfin_list.html
@@ -163,7 +163,7 @@
 			</div>
             
             <div class="heading">
-				<h1>紅燒蟹肉翅(位)</h1>
+				<h1>紅燒蟹肉翅(位/例)</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
