--- a/chinese/starters.html
+++ b/chinese/starters.html
@@ -133,13 +133,13 @@
 			<img src="../images/dishes/1_starters/fourhappy_s.jpg" alt="四喜烤夫" />
 		</div><!--grid_thumb-->
         
-        <div class="grid_thumb">
+<!--         <div class="grid_thumb">
 			<div class="heading">
 				<h1>提子蛋酥</h1>
 				<p class="price">$7<sup>.98</sup></p>
 			</div>
 			<img src="../images/dishes/1_starters/grapeeggtart_s.jpg" alt="提子蛋酥" />
-		</div><!--grid_thumb-->
+		</div><!--grid_thumb--> -->
         
         <div class="grid_thumb">
 			<div class="heading">
