--- a/chinese/starters_list.html
+++ b/chinese/starters_list.html
@@ -153,7 +153,7 @@
 			<img src="../images/dishes/1_starters/fourhappy_l.jpg" alt="四喜烤夫" />
 		</li><!--list_item-->
         
-        <li class="list_item">
+<!--         <li class="list_item">
 			<div class="heading">
 				<h1>提子蛋酥</h1>
                 <p class="desc"></p>
@@ -162,7 +162,7 @@
 				<p class="price">$7<sup>.98</sup></p>
 			</div>
 			<img src="../images/dishes/1_starters/grapeeggtart_l.jpg" alt="提子蛋酥" />
-		</li><!--list_item-->
+		</li><!--list_item--> -->
         
         <li class="list_item">
 			<div class="heading">
