--- a/chinese/homestyle_list.html
+++ b/chinese/homestyle_list.html
@@ -99,7 +99,7 @@
             <img src="../images/dishes/11_homestyle/earthchicken_l.jpg" alt="" />
 		</li><!--list_item-->
         
-        <li class="list_item">  
+        <!--<li class="list_item">  
             <div class="heading">
 				<h1>椒鹽獅頭魚 (8條)</h1>
                 <p class="desc"></p>
