--- a/english/homestyle_list.html
+++ b/english/homestyle_list.html
@@ -103,7 +103,7 @@
             <img src="../images/dishes/11_homestyle/earthchicken_l.jpg" alt="" />
 		</li><!--list_item-->
         
-        <li class="list_item"> 
+        <!--<li class="list_item"> 
             <div class="heading">
 				<h1>Deep-fried lionhead fish with spicy salt and pepper</h1>
                 <p class="desc"></p>
