--- a/chinese/hotpot_list.html
+++ b/chinese/hotpot_list.html
@@ -72,7 +72,7 @@
 				<p class="price">$26<sup>.80</sup></p>
 			</div>-->
             
-            <!--<li class="list_item">
+            <li class="list_item">
             <div class="heading">
 				<h1>古法炆羊腩煲</h1>
                 <p class="desc"></p>
